--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1 id="nametag">Maryia Radkevich</h1>  
       </header> 
   <ul>     
-      <li id="about" class="menu"><a href="amazon.com">About</a></li>
-      <li id="Portfolio" class="menu"><a href="google.com">Portfolio</a></li>
+      <li id="about" class="menu"><a href="https://www.amazon.com/">About</a></li>
+      <li id="Portfolio" class="menu"><a href="https://www.google.com/">Portfolio</a></li>
       <li id="Contact" class="menu"><a href="page1.html">Contact</a></li>
   </ul>
 </nav>  
